@@ -19,46 +19,20 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
-
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
 public class SecurityConfig {
 
     private final String[] PUBLIC_ENDPOINTS = {
-
-//            "/auth/**",
-//            //"/blogs/**",
-////            "/users/**",
-//            "/comments/**",
-//            "/ws/**",
-//            "/topic/notifications",
-//            "/api/stream/ws/info",
-//            "/item/**",
-//            "/livestream/**",
-//            "/category/**",
-//            "/topic/**",
-//            "/chat/**",
-//            "/donation/**",
-//            "/schedule/**",
-//            "/tag/**",
-//            "/payment/**",
-//            "/report/**",
-//            "/leaderboard/**",
-//            "/notification/**",
-//            "/search/**",
-////            "/follow/**",
-//            "/withdraw",
-//            "/chart/**"
-
             "/auth/**",
-           //"/blogs/**",
+            "/blogs/**",
             "/users/**",
-            "/comments/**",
-//            "*",
+            "comments/**",
+            "*",
             "/ws",
             "/ws/**",
-//            "/ws/*",
+            "/ws/*/*",
             "/topic/notifications",
             "/api/stream/ws/info",
             "/item/*",
@@ -78,13 +52,12 @@ public class SecurityConfig {
             "/report/**",
             "/leaderboard/**",
             "/report/**",
-            "/notification/**",
+            "notification/**",
             "/users/**",
             "/search/**",
-            //"follow/**",
+            "follow/**",
             "/withdraw",
             "/chart/**",
-//            "/chart/**"
     };
 
     @Value("${fe-url}")
@@ -98,6 +71,7 @@ public class SecurityConfig {
         this.customOAuth2UserService = customOAuth2UserService;
     }
 
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
@@ -105,15 +79,15 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        .requestMatchers("/ws/**").permitAll()
                         .requestMatchers(PUBLIC_ENDPOINTS).permitAll()
+                        .requestMatchers("/ws/**").permitAll()
                         .anyRequest().authenticated()
                 )
-//                .oauth2Login(oauth2 -> oauth2
-//                        .defaultSuccessUrl("http://localhost:8080/auth/oauth2/success", true)
-//                        .failureUrl("http://localhost:3000/login?error=true")
-//                        .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
-//                )
+                .oauth2Login(oauth2 -> oauth2
+                        .defaultSuccessUrl("http://localhost:8080/auth/oauth2/success", true)
+                        .failureUrl("http://localhost:3000/login?error=true")
+                        .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
+                )
                 .oauth2ResourceServer(oauth2 -> oauth2
                         .jwt(jwt -> jwt
                                 .decoder(customJwtDecoder)
@@ -128,7 +102,6 @@ public class SecurityConfig {
     public JwtAuthenticationConverter jwtAuthenticationConverter() {
         JwtGrantedAuthoritiesConverter converter = new JwtGrantedAuthoritiesConverter();
         converter.setAuthorityPrefix("");
-
         JwtAuthenticationConverter jwtConverter = new JwtAuthenticationConverter();
         jwtConverter.setJwtGrantedAuthoritiesConverter(converter);
         return jwtConverter;
@@ -139,7 +112,7 @@ public class SecurityConfig {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowedOrigins(List.of(feUrl));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
+        config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
         config.setExposedHeaders(List.of("Set-Cookie"));
 
